--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-psycopg[binary,pool]==3.2.1
+psycopg[binary,pool]==3.2.10   # <-- bump desde 3.2.1
 python-dotenv==1.0.1
