--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ psycopg[binary,pool]==3.2.10
 python-dotenv==1.0.1
 python-multipart==0.0.9
 httpx==0.27.2
+PyJWT>=2.8,<3
+httpx>=0.27,<1  # ya lo estás importando en wsp.py
